# LogBlock

./: .gitignore  .gitmodules  EditPost.tsx  README.md  compose.yaml  docker-compose-rebuild.sh  package.json  pnpm-lock.yaml  post.tsx
docs/Analysis & Design/: ReadMe.txt  rup_sad.docx
docs/Management/: rup_sdpln_sp.docx
docs/Management/Proposal/: Requirements.txt  alda_g17.aux  alda_g17.fdb_latexmk  alda_g17.fls  alda_g17.hst  alda_g17.out  alda_g17.toc  alda_g17.ver
docs/Management/Proposal/base/: acronyms.tex  history.tex  metadata.tex
docs/Management/Proposal/content/: content.aux  content.tex  content_deep.tex
docs/Management/TeamContract/: alda_g17.aux  alda_g17.fdb_latexmk  alda_g17.fls  alda_g17.hst  alda_g17.out  alda_g17.tex  alda_g17.toc  alda_g17.ver
docs/Management/TeamContract/base/: history.tex  metadata.tex
docs/Project Management/: rup_sdpln_sp.docx  weekly-scrum.docx
docs/Requirements/: rup_ucspec.docx  rup_vision_sp.docx
docs/Testing/: rup_tstpln.docx  test-cases.xlsx  test-report.xlsx
pa/PA1-Group01/: resources.txt
pa/PA2-Group01/: ReadMe.txt  Revised.mdj  UC05.mdj
pa/PA3-Group01/: Diagrams.mdj  ReadMe.txt
pa/PA3-Group01/Back-end-Subsystem/: AdministrationService.mdj  AuthenticationService.mdj  FeedsGenerationService.mdj  ModelController.mdj  PostService.mdj  ProfileService.mdj  Respository.mdj
pa/PA3-Group01/Front-end-Subsystem/: AuthenticationView.mdj  ExplorationFeedView.mdj  NewsFeedView.mdj  PostView.mdj  ProfileView.mdj  ReportLoggingView.mdj
src/back-end/: .dockerignore  .env  Dockerfile  pom.xml  test.mv.db  test.trace.db
src/back_end/: CMakeLists.txt  README.md
src/back_end/src/: App.cpp  App.hpp
src/back_end/test/: CMakeLists.txt  Tests.cpp
src/back_end/test/http_requests/: HTTPRequestClientTest.cpp  HTTPRequestClientTest.hpp
src/database/: Dockerfile
src/database/sql-scripts/: core_schematic.sql  data_populator.sql
src/front-end/: .env  Dockerfile  README.md  middleware.tsx  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
src/front-end/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
(+140 files in other folders)
